--- a/app/src/main/res/layout/activity_edit_vehicle.xml
+++ b/app/src/main/res/layout/activity_edit_vehicle.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -25,10 +26,11 @@
         android:layout_height="40dp"
         android:layout_marginTop="16dp"
         android:paddingStart="10dp"
-        android:textColorHint="@color/black"
+        android:textColorHint="@color/gray"
         android:background="@drawable/rounded_edittext_background"
         android:textColor="@color/black"
-        android:hint="Vehicle Number" />
+        android:hint="@string/vehicle_number"
+        tools:ignore="RtlSymmetry" />
 
     <Spinner
         android:id="@+id/spinner_type"
@@ -38,43 +40,46 @@
         android:paddingStart="5dp"
         android:textColor="@color/black"
         style="@style/CustomSpinnerStyle"
-        />
+        tools:ignore="RtlSymmetry" />
 
     <EditText
         android:id="@+id/edit_text_description"
         android:layout_width="match_parent"
-        android:hint="Description"
+        android:hint="@string/description"
         android:textStyle="bold"
-        android:textColorHint="@color/black"
+        android:textColorHint="@color/gray"
         android:layout_height="40dp"
         android:paddingStart="10dp"
         android:background="@drawable/rounded_edittext_background"
         android:textColor="@color/black"
-        android:layout_marginTop="16dp"/>
+        android:layout_marginTop="16dp"
+        tools:ignore="RtlSymmetry" />
 
     <EditText
         android:id="@+id/edit_text_price_per_day"
         android:layout_width="match_parent"
-        android:hint="Price per day"
+        android:hint="@string/price_per_day"
         android:inputType="numberDecimal"
-        android:textColorHint="@color/black"
+        android:textColorHint="@color/gray"
         android:textStyle="bold"
         android:layout_height="40dp"
         android:paddingStart="10dp"
         android:background="@drawable/rounded_edittext_background"
         android:textColor="@color/black"
-        android:layout_marginTop="16dp"/>
+        android:layout_marginTop="16dp"
+        tools:ignore="RtlSymmetry" />
     <EditText
         android:id="@+id/edit_text_city"
         android:layout_width="match_parent"
         android:textStyle="bold"
         android:layout_height="40dp"
         android:layout_marginTop="16dp"
-        android:textColorHint="@color/black"
+        android:textColorHint="@color/gray"
         android:paddingStart="10dp"
         android:background="@drawable/rounded_edittext_background"
         android:textColor="@color/black"
-        android:hint="Address" />
+        android:hint="@string/address"
+        tools:ignore="RtlSymmetry" />
 
 
     <Button
@@ -84,7 +89,7 @@
         android:background="@drawable/rounded_btn_background"
         android:textColor="@color/white"
         android:textStyle="bold"
-        android:text="Update Vehicle"
+        android:text="@string/update_vehicle"
         android:layout_marginTop="16dp"/>
     </LinearLayout>
 
