--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
         android:textColor="@color/black"
         android:textStyle="bold"
         android:elevation="8dp"
-        android:text="Welcome, User"
+        android:text="@string/welcome_user"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"/>
     <androidx.recyclerview.widget.RecyclerView
@@ -31,7 +31,7 @@
         android:layout_margin="16dp"
         android:background="@color/black"
         android:src="@android:drawable/ic_input_add"
-        android:contentDescription="Add Vehicle"/>
+        android:contentDescription="@string/add_vehicle"/>
 
 
 
