--- a/app/src/main/res/layout/activity_map_viewer.xml
+++ b/app/src/main/res/layout/activity_map_viewer.xml
@@ -12,10 +12,10 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginTop="48dp"
-        android:text="Colombo"
+        android:text="@string/loading"
         android:textAlignment="center"
         android:textColor="@color/black"
-        android:textSize="30dp"
+        android:textSize="30sp"
         android:textStyle="bold"
         android:elevation="8dp"
         app:layout_constraintEnd_toEndOf="parent"
